scripts/nullaway/wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:29: error: [NullAway] assigning @Nullable expression to @NonNull field
        commentaire = null;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:118: error: [NullAway] dereferenced expression this.media.getCours().getProf() is @Nullable
            this.media.getCours().getProf().addAlerteEmprunt(this);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Cours.java:110: error: [NullAway] dereferenced expression prof is @Nullable
        res += "enseignant : " + prof.getNom() + "\n";
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:28: error: [NullAway] assigning @Nullable expression to @NonNull field
        etudiants = e;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:31: error: [NullAway] dereferenced expression empruntConcerne is @Nullable
        empruntConcerne.setCommentaire(com);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Stage.java:86: error: [NullAway] dereferenced expression projet.getEtudiants() is @Nullable
        for (int i = 0; i < projet.getEtudiants().size(); i++) res += projet.getEtudiants().get(i).getNom();
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:148: error: [NullAway] dereferenced expression Bdd.listProjets.get(indexProjet).getEtudiants() is @Nullable
        Bdd.listProjets.get(indexProjet).getEtudiants().add(etudiant);
                                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:169: error: [NullAway] dereferenced expression projet.getEtudiants() is @Nullable
        while (indexEtudiantProjet < projet.getEtudiants().size() && etudiant == null) {
                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:179: error: [NullAway] dereferenced expression Bdd.listProjets.get(indexProjet).getEtudiants() is @Nullable
        Bdd.listProjets.get(indexProjet).getEtudiants().remove(indexEtudiantProjet);
                                                       ^
    (see http://t.uber.com/nullaway )
9 errors
